--- a/.gitignore
+++ b/.gitignore
@@ -1,21 +1,6 @@
-# WordPress
-wp-config.php
-wp-content/uploads/
-wp-content/blogs.dir/
-wp-content/upgrade/
-wp-content/backup-db/
-wp-content/advanced-cache.php
-wp-content/wp-cache-config.php
-wp-content/cache/
-wp-content/cache/supercache/
-
-# Plugin specific
-*.log
-*.tmp
-*.bak
-*.swp
-*.swo
-*~
+# WordPress Plugin Release Files
+release/
+*.zip
 
 # OS generated files
 .DS_Store
@@ -29,29 +14,29 @@ Thumbs.db
 # IDE files
 .vscode/
 .idea/
-*.sublime-project
-*.sublime-workspace
+*.swp
+*.swo
+*~
 
-# Node modules (if any)
+# Logs
+*.log
+error_log
+debug.log
+
+# Temporary files
+*.tmp
+*.temp
+
+# Node modules (if you add any build tools)
 node_modules/
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 
-# Build files
-dist/
-build/
-
-# Composer
+# Composer (if you add any PHP dependencies)
 vendor/
 composer.lock
 
-# Environment files
-.env
-.env.local
-.env.production
-
-# Test files
-tests/
-phpunit.xml
-.phpunit.result.cache
+# Backup files
+*.bak
+*.backup
